--- a/ParseConfigFile/test.conf
+++ b/ParseConfigFile/test.conf
@@ -1,160 +1,15 @@
 
-# server === > "listen", "server_name", 
-# "error_page", "client_max_body_size"
-# , "root", "index", "autoindex", "return"
-
-# location =====> "autoindex", "allow_methods", 
-# "return", "php-cgi", 
-# "root", "index", "py-cgi", "upload_store"
-
-server {
-    # "root", "index", "py-cgi", "upload_store"
-    listen 8081;                      # Listen on port 80 for HTTP requests
-    server_name example.com; # Domain names for the server
-    root /var/www/html;             # Root directory for the website
-	upload_store /hello;
-    index index.html index.htm;
-	client_max_body_size 999784;
-	location / {
-        index index.html index.htm;  # Serve files or directories, or return 404
-		return 300 /youtube;
-	}
-
-    # Location block for serving static files
-    location /   ~ \.php$  {
-        index index.html index.htm;  # Serve files or directories, or return 404
-    }
-    # Location block for handling PHP files (if PHP is installed)
-    location ~ \.php$ {
-        root snippets/fastcgi-php.conf;
-		autoindex off;
-    }
-
-    #Redirect HTTP to HTTPS (optional)
-    # location / {
-    #     return 301 https://$host$request_uri;
-    # }
-	return 304 /udemy.comm                    ;
-    # Error pages
-    error_page 403 404.txt;
-    error_page 404 404.txt;
-    error_page 406 404.txt;
-    error_page 407 404.txt;
-    location  /404.html {
-        root /var/www/html;
-	}
-    # Disable access to hidden files (e.g., .git)
-    location ~ /\. {
-       allow_methods POST DELETE GET;
-	}
-}
-
-server {
-    # "root", "index", "py-cgi", "upload_store"
-    listen 4242;                      # Listen on port 80 for HTTP requests
-    server_name example.com; # Domain names for the server
-    root /var/www/html;             # Root directory for the website
-    index index.html index.htm;
-	client_max_body_size 999784;
-	location / {
-        index index.html index.htm;  # Serve files or directories, or return 404
-		allow_methods POST DELETE GET;
-		return 300 /youtube;
-	}
-
-    # Location block for serving static files
-    location /   ~ \.php$  {
-        index index.html index.htm;  # Serve files or directories, or return 404
-    }
-    # Location block for handling PHP files (if PHP is installed)
-    location ~ \.php$ {
-        root snippets/fastcgi-php.conf;
-		autoindex off;
-    }
-
-    # Redirect HTTP to HTTPS (optional)
-    # location / {
-    #     return 301 https://$host$request_uri;
-    # }
-
-    # Error pages
-    error_page 404 /404.html;
-    location  /404.html {
-        root /var/www/html;
-	}
-
-    # Disable access to hidden files (e.g., .git)
-    location ~ /\. {
-       allow_methods POST DELETE GET;
-	}
-}
-
-# server {
-# 	listen 8787;
-# 	# "root", "index", "py-cgi", "upload_store"
-#     listen 8089;                      # Listen on port 80 for HTTP requests
-#     server_name example.com www.example.com; # Domain names for the server
-
-#     root /var/www/html;             # Root directory for the website
-#     index index.html index.htm;     # Default index files
-
-# 	client_max_body_size +78;
-#     # Location block for serving static files
-#     location / {
-#         index index.html index.htm;  # Serve files or directories, or return 404
-# 	}
-
-#     # Location block for handling PHP files (if PHP is installed)
-#     location ~ \.php$ {
-#         root snippets/fastcgi-php.conf;
-#     }
-
-#     # Redirect HTTP to HTTPS (optional)
-#     # location / {
-#     #     return 301 https://$host$request_uri;
-#    }
-#     # Error pages
-#     error_page 404 /404.html;
-#     location  /404.html {
-#         root /var/www/html;
-# 		allow_methods POST DELETE GET;
-# 	}
-
-#     # Disable access to hidden files (e.g., .git)
-#     location /test /home / /doc /location {
-# 		allow_methods POST DELETE GET;
-# 	} # 	client_max_body_size 8984;
-# } 
-
-# server {
-# 	listen 900;
-# 	listen 700;
-# 	listen 600;
-
-# 	client_max_body_size 8984;
-
-
-# 	location ~ /\. {
-#        allow_methods POST DELETE GET;
-# 	}
-
-# 	location ~ /\. {
-#        allow_methods POST DELETE GET;
-# 	}
-# }
-                   
-
 server {
     listen 8081;                      # Listen on port 8081 for HTTP requests
     server_name example.com;          # Domain names for the server
     root /var/www/html;               # Root directory for the website
     upload_store /hello;
     index index.html index.htm;
-    client_max_body_size 10;         # Corrected value for client_max_body_size
+    #client_max_body_size 10;         # Corrected value for client_max_body_size
 	location / {
         index index.html index.htm;   # Serve files or directories, or return 404
         return 300 /youtube;
-	                }
+	}
 
     location ~ \.php$ {
         root snippets/fastcgi-php.conf;
@@ -169,7 +24,38 @@ server {
     location /404.html {
         root /var/www/html;
     }
-	# kljksdfjaklsf
+	#kljksdfjaklsf
+    location ~ /\. {
+        allow_methods POST DELETE GET;
+    }
+}
+
+server {
+    listen 8081;                      # Listen on port 8081 for HTTP requests
+    server_name example.com;          # Domain names for the server
+    root /var/www/html;               # Root directory for the website
+    upload_store /hello;
+    index index.html index.htm;
+    client_max_body_size 10;         # Corrected value for client_max_body_size
+	location / {
+        index index.html index.htm;   # Serve files or directories, or return 404
+        return 300 /youtube;
+	}
+
+    location ~ \.php$ {
+        root snippets/fastcgi-php.conf;
+        autoindex off;
+    }
+    return 304 /udemy.comm;
+    error_page 403 404.txt;
+    error_page 404 404.txt;
+    error_page 406 404.txt;
+    error_page 407 404.txt;
+
+    location /404.html {
+        root /var/www/html;
+    }
+	#kljksdfjaklsf
     location ~ /\. {
         allow_methods POST DELETE GET;
     }
