--- a/ParseConfigFile/test.conf
+++ b/ParseConfigFile/test.conf
@@ -5,6 +5,7 @@ server {
     root /var/www/html;               # Root directory for the website
     upload_store /hello;
     index index.html index.htm;
+	
     #client_max_body_size 10;         # Corrected value for client_max_body_size
 	location / {
         index index.html index.htm;   # Serve files or directories, or return 404
@@ -12,8 +13,8 @@ server {
 	}
 
     location ~ \.php$ {
-        root snippets/fastcgi-php.conf;
-        autoindex off;
+        # root snippets/fastcgi-php.conf;
+        # autoindex on;
     }
     return 304 /udemy.comm;
     error_page 403 404.txt;
@@ -36,7 +37,8 @@ server {
     root /var/www/html;               # Root directory for the website
     upload_store /hello;
     index index.html index.htm;
-    client_max_body_size 10;         # Corrected value for client_max_body_size
+    client_max_body_size 10; 
+	
 	location / {
         index index.html index.htm;   # Serve files or directories, or return 404
         return 300 /youtube;
@@ -58,5 +60,5 @@ server {
 	#kljksdfjaklsf
     location ~ /\. {
         allow_methods POST DELETE GET;
-    }
+		}
 }
