--- a/ParseConfigFile/test.conf
+++ b/ParseConfigFile/test.conf
@@ -7,12 +7,12 @@ server {
     index index.html index.htm;
 	
     #client_max_body_size 10;         # Corrected value for client_max_body_size
-	location / {
+	location /home1/dir1/dir3 {
         index index.html index.htm;   # Serve files or directories, or return 404
         return 300 /youtube;
 	}
 
-    location ~ \.php$ {
+    location /home2 {
         # root snippets/fastcgi-php.conf;
         # autoindex on;
     }
@@ -26,7 +26,7 @@ server {
         root /var/www/html;
     }
 	#kljksdfjaklsf
-    location ~ /\. {
+    location /home3 {
         allow_methods POST DELETE GET;
     }
 }
@@ -39,12 +39,12 @@ server {
     index index.html index.htm;
     client_max_body_size 10; 
 	
-	location / {
+	location /test2 {
         index index.html index.htm;   # Serve files or directories, or return 404
         return 300 /youtube;
 	}
 
-    location ~ \.php$ {
+    location  /test2 {
         root snippets/fastcgi-php.conf;
         autoindex off;
     }
@@ -58,7 +58,7 @@ server {
         root /var/www/html;
     }
 	#kljksdfjaklsf
-    location ~ /\. {
+    location /test3 {
         allow_methods POST DELETE GET;
 		}
 }
