start parsing cgi part

--- a/ParseConfigFile/test.conf
+++ b/ParseConfigFile/test.conf
@@ -1,23 +1,27 @@
 
 server {
-    listen 8081;                      # Listen on port 8081 for HTTP requests
+    listen 9090;                      # Listen on port 8081 for HTTP requests
     server_name example.com;          # Domain names for the server
-    root /var/www/html;               # Root directory for the website
-    upload_store /hello;
+    root ../../../Users/zelabbas/Cleaner_42;               # Root directory for the website
+    upload_store ../../../Users/zelabbas/Cleaner_42;
     index index.html index.htm;
+	# cgi_extension php /path/to/file;
+
 	
     #client_max_body_size 10;         # Corrected value for client_max_body_size
 	location /home1/dir1/dir3 {
         index index.html index.htm;   # Serve files or directories, or return 404
         return 300 /youtube;
+		cgi_extension php /Users/zelabbas/OurWebserver/WebServ.hpp;
 	}
 
     location /home2 {
-        # root snippets/fastcgi-php.conf;
-        # autoindex on;
+        root snippets/fastcgi-php.conf;
+        autoindex on;
+		# cgi_extension php /path/to/file;
     }
-    return 304 /udemy.comm;
     error_page 403 404.txt;
+    return 304 /udemy.comm;
     error_page 404 404.txt;
     error_page 406 404.txt;
     error_page 407 404.txt;
@@ -31,34 +35,34 @@ server {
     }
 }
 
-server {
-    listen 8081;                      # Listen on port 8081 for HTTP requests
-    server_name example.com;          # Domain names for the server
-    root /var/www/html;               # Root directory for the website
-    upload_store /hello;
-    index index.html index.htm;
-    client_max_body_size 10; 
+# server {
+#     listen 8081;                      # Listen on port 8081 for HTTP requests
+#     server_name example.com;          # Domain names for the server
+#     root /var/www/html;               # Root directory for the website
+#     upload_store /hello;
+#     index index.html index.htm;
+#     client_max_body_size 10; 
 	
-	location /test2 {
-        index index.html index.htm;   # Serve files or directories, or return 404
-        return 300 /youtube;
-	}
+# 	location /test2 {
+#         index index.html index.htm;   # Serve files or directories, or return 404
+#         return 300 /youtube;
+# 	}
 
-    location  /test2 {
-        root snippets/fastcgi-php.conf;
-        autoindex off;
-    }
-    return 304 /udemy.comm;
-    error_page 403 404.txt;
-    error_page 404 404.txt;
-    error_page 406 404.txt;
-    error_page 407 404.txt;
+#     location  /test2 {
+#         root snippets/fastcgi-php.conf;
+#         autoindex off;
+#     }
+#     return 304 /udemy.comm;
+#     error_page 403 404.txt;
+#     error_page 404 404.txt;
+#     error_page 406 404.txt;
+#     error_page 407 404.txt;
 
-    location /404.html {
-        root /var/www/html;
-    }
-	#kljksdfjaklsf
-    location /test3 {
-        allow_methods POST DELETE GET;
-		}
-}
+#     location /404.html {
+#         root /var/www/html;
+#     }
+# 	#kljksdfjaklsf
+#     location /test3 {
+#         allow_methods POST DELETE GET;
+# 		}
+# }
