--- a/ParseConfigFile/test.conf
+++ b/ParseConfigFile/test.conf
@@ -15,9 +15,9 @@ server {
 
     location /youtube {
         # root /var/www/html;
-        index index.html;
-        autoindex off;
         return 301 www.youtube.com;
+        autoindex on;
+        index index.html;
     }
 	# kljksdfjaklsf
     location /cookie {
@@ -45,6 +45,7 @@ server {
         cgi_extension py /usr/bin/python3;
         # cgi_extension js  /usr/local/bin/node;
     }
+    return 301 www.youtube.com;
 }
 
 # server {
