--- a/ParseConfigFile/test.conf
+++ b/ParseConfigFile/test.conf
@@ -24,7 +24,7 @@ server {
         root /Volumes/TOSHIBA/www/;
         index send_form.html;
         autoindex off;
-        allow_methods POST GET;
+        allow_methods DELETE GET;
         cgi_extension py /usr/bin/python3;
         cgi_extension js  /usr/local/bin/node;
     }
@@ -33,7 +33,7 @@ server {
         root /Volumes/TOSHIBA/www/;
         index cookie2.py;
         autoindex off;
-        allow_methods POST GET;
+        allow_methods DELETE GET;
         cgi_extension py /usr/bin/python3;
         cgi_extension js  /usr/local/bin/node;
     }
@@ -41,11 +41,60 @@ server {
         root /Volumes/TOSHIBA/www/;
         index index.html;
         autoindex on;
-        allow_methods POST GET;
+        allow_methods DELETE GET;
         cgi_extension py /usr/bin/python3;
         # cgi_extension js  /usr/local/bin/node;
     }
-    return 301 www.youtube.com;
+    # return 301 www.youtube.com;
+}
+
+server {
+    listen 9090;                      # Listen on port 8081 for HTTP requests
+    server_name zechi.com www.nigro.com;          # Domain names for the server
+    root /Volumes/TOSHIBA/www/;              # Root directory for the website
+    # upload_store ../../../Users/zelabbas/Cleaner_42;
+    index index.html;
+    autoindex on;
+    error_page 403 404 500 403 test.html;
+    # allow_methods POST  GET;
+	# cgi_extension php /path/to/file;
+
+	
+    #client_max_body_size 10;         # Corrected value for client_max_body_size
+
+    location /youtube {
+        # root /var/www/html;
+        return 301 www.youtube.com;
+        autoindex on;
+        index index.html;
+    }
+	# kljksdfjaklsf
+    location /cookie {
+        root /Volumes/TOSHIBA/www/;
+        index send_form.html;
+        autoindex off;
+        allow_methods DELETE GET;
+        cgi_extension py /usr/bin/python3;
+        cgi_extension js  /usr/local/bin/node;
+    }
+
+     location /cookie2 {
+        root /Volumes/TOSHIBA/www/;
+        index cookie2.py;
+        autoindex off;
+        allow_methods DELETE GET;
+        cgi_extension py /usr/bin/python3;
+        cgi_extension js  /usr/local/bin/node;
+    }
+     location /cgi-tiriri {
+        root /Volumes/TOSHIBA/www/;
+        index index.html;
+        autoindex on;
+        allow_methods DELETE GET;
+        cgi_extension py /usr/bin/python3;
+        # cgi_extension js  /usr/local/bin/node;
+    }
+    # return 301 www.youtube.com;
 }
 
 # server {
