update fix some bugs in webserver.cpp and const.hpp for delete method

--- a/ParseConfigFile/test.conf
+++ b/ParseConfigFile/test.conf
@@ -15,13 +15,13 @@ server {
 
     location /youtube {
         # root /var/www/html;
-        return 301 www.youtube.com;
-        autoindex on;
-        index index.html;
+        # return 301 www.youtube.com;
+        # autoindex on;
+        # index index.html;
     }
 	# kljksdfjaklsf
     location /cookie {
-        root /Volumes/TOSHIBA/www/;
+        # root /Volumes/TOSHIBA/www/;
         index send_form.html;
         autoindex off;
         allow_methods DELETE GET;
@@ -41,7 +41,7 @@ server {
         root /Volumes/TOSHIBA/www/;
         index index.html;
         autoindex on;
-        allow_methods DELETE GET;
+        allow_methods GET;
         cgi_extension py /usr/bin/python3;
         # cgi_extension js  /usr/local/bin/node;
     }
@@ -53,8 +53,8 @@ server {
     server_name zechi.com www.nigro.com;          # Domain names for the server
     root /Volumes/TOSHIBA/www/;              # Root directory for the website
     # upload_store ../../../Users/zelabbas/Cleaner_42;
-    index index.html;
-    autoindex on;
+    index index.html index.html;
+    autoindex on; // !here zechi add the index.html int the get_method shoudl not do this in case of index does not existe in server config try this : http://localhost:8080/
     error_page 403 404 500 403 test.html;
     # allow_methods POST  GET;
 	# cgi_extension php /path/to/file;
