--- a/ParseConfigFile/test.conf
+++ b/ParseConfigFile/test.conf
@@ -22,9 +22,10 @@ server {
 	# kljksdfjaklsf
     location /cookie {
         # root /Volumes/TOSHIBA/www/;
+        upload_store /Users/zelabbas;
         index send_form.html;
         autoindex off;
-        allow_methods DELETE GET;
+        allow_methods POST GET;
         cgi_extension py /usr/bin/python3;
         cgi_extension js  /usr/local/bin/node;
     }
@@ -39,9 +40,10 @@ server {
     }
      location /cgi-tiriri {
         root /Volumes/TOSHIBA/www/;
+        upload_store /Users/zelabbas;
         index index.html;
         autoindex on;
-        allow_methods GET;
+        allow_methods POST GET;
         cgi_extension py /usr/bin/python3;
         # cgi_extension js  /usr/local/bin/node;
     }
@@ -54,7 +56,7 @@ server {
     root /Volumes/TOSHIBA/www/;              # Root directory for the website
     # upload_store ../../../Users/zelabbas/Cleaner_42;
     index index.html index.html;
-    autoindex on; // !here zechi add the index.html int the get_method shoudl not do this in case of index does not existe in server config try this : http://localhost:8080/
+    autoindex on; #// !here zechi add the index.html int the get_method shoudl not do this in case of index does not existe in server config try this : http://localhost:8080/
     error_page 403 404 500 403 test.html;
     # allow_methods POST  GET;
 	# cgi_extension php /path/to/file;
