fix problems: 1) check if post method is allowed ✅

--- a/ParseConfigFile/test.conf
+++ b/ParseConfigFile/test.conf
@@ -25,7 +25,7 @@ server {
 	# kljksdfjaklsf
     location /cookie {
         # root /Volumes/TOSHIBA/www/;
-        upload_store /Users/skarim;
+        upload_store /Users/zech-chi;
         index send_form.html;
         autoindex off;
         allow_methods POST GET;
@@ -43,22 +43,22 @@ server {
     }
      location /cgi-tiriri {
         root /Volumes/TOSHIBA/www/;
-        upload_store /Users/skarim;
+        upload_store /Users/zech-chi;
         index index.html;
         autoindex on;
         allow_methods POST GET;
         cgi_extension py /usr/bin/python3;
         # cgi_extension js  /usr/local/bin/node;
     }
-     location /test {
-        root /Volumes/Ventoy;
-        upload_store /Users/skarim;
-        index index.html;
-        autoindex on;
-        allow_methods POST GET;
-        cgi_extension py /usr/bin/python3;
-        # cgi_extension js  /usr/local/bin/node;
-    }
+    #  location /test {
+    #     root /Volumes/Ventoy;
+    #     upload_store /Users/zech-chi;
+    #     index index.html;
+    #     autoindex on;
+    #     allow_methods POST GET;
+    #     cgi_extension py /usr/bin/python3;
+    #     # cgi_extension js  /usr/local/bin/node;
+    # }
     # return 301 www.youtube.com;
 }
 
