--- a/ParseConfigFile/test.conf
+++ b/ParseConfigFile/test.conf
@@ -9,6 +9,7 @@ server {
     index index.html;
     autoindex on;
     error_page 403 404 500 403 test.html;
+    # client_max_body_size 10; 
     # allow_methods POST  GET;
 	# cgi_extension php /path/to/file;
 
@@ -48,7 +49,7 @@ server {
         autoindex on;
         allow_methods POST GET;
         cgi_extension py /usr/bin/python3;
-        # cgi_extension js  /usr/local/bin/node;
+        cgi_extension js  /usr/local/bin/node;
     }
     #  location /test {
     #     root /Volumes/Ventoy;
@@ -74,7 +75,7 @@ server {
 	# cgi_extension php /path/to/file;
 
 	
-    #client_max_body_size 10;         # Corrected value for client_max_body_size
+    client_max_body_size 10;         # Corrected value for client_max_body_size
 
     location /youtube {
         # root /var/www/html;
@@ -103,9 +104,10 @@ server {
 
     location /cgi-tiriri {
         root /Volumes/TOSHIBA/www/;
+        upload_store /Users/zech-chi;
         index index.html;
         autoindex on;
-        allow_methods DELETE GET;
+        allow_methods POST DELETE GET;
         cgi_extension py /usr/bin/python3;
         # cgi_extension js  /usr/local/bin/node;
     }
