--- a/ParseConfigFile/test.conf
+++ b/ParseConfigFile/test.conf
@@ -42,6 +42,15 @@ server {
         cgi_extension py /usr/bin/python3;
         cgi_extension js  /usr/local/bin/node;
     }
+    
+    location /home {
+        root /Users/zech-chi/goinfre/;
+        upload_store /Users/zech-chi/goinfre/home/;
+        autoindex on;
+        allow_methods POST GET DELETE;
+        index index.html;
+    }
+
      location /cgi-tiriri {
         root /Volumes/TOSHIBA/www/;
         upload_store /Users/zech-chi;
