--- a/ParseConfigFile/test.conf
+++ b/ParseConfigFile/test.conf
@@ -36,9 +36,10 @@ server {
 
      location /cookie2 {
         root /Volumes/TOSHIBA/www/;
+        upload_store /Volumes/TOSHIBA/www/;
         index cookie2.py;
         autoindex off;
-        allow_methods DELETE GET;
+        allow_methods DELETE GET POST;
         cgi_extension py /usr/bin/python3;
         cgi_extension js  /usr/local/bin/node;
     }
@@ -49,6 +50,7 @@ server {
         autoindex on;
         allow_methods POST GET DELETE;
         index index.html;
+        # cgi_extension js  /usr/local/bin/node;
     }
 
      location /cgi-tiriri {
