--- a/ParseConfigFile/default.conf
+++ b/ParseConfigFile/default.conf
@@ -5,7 +5,7 @@ server {
     # upload_store ../../../Users/zelabbas/Cleaner_42;
     index index.html;
     autoindex on;
-    error_page 403 500 index.html;
+    # error_page 403 500 index.html;
     # client_max_body_size 10; 
     # allow_methods POST  GET;
 	# cgi_extension php /path/to/file;
