fix problems: 11) fix redirection in each location ✅

--- a/ParseConfigFile/default.conf
+++ b/ParseConfigFile/default.conf
@@ -3,23 +3,31 @@ server {
     server_name zechi.com www.nigro.com;          # Domain names for the server
     root /Volumes/Ventoy/www;              # Root directory for the website
     # upload_store ../../../Users/zelabbas/Cleaner_42;
-    index index.html;
+    # index index.html;
     autoindex on;
     # error_page 403 500 index.html;
     # client_max_body_size 10; 
     # allow_methods POST  GET;
 	# cgi_extension php /path/to/file;
-
-
+    # return 301 www.youtube.com;
 	
     # client_max_body_size 10;         # Corrected value for client_max_body_size
 
     location /youtube {
         # root /var/www/html;
-        # return 301 www.youtube.com;
+        return 301 www.youtube.com;
         # autoindex on;
         # index index.html;
     }
+    
+    location /intra {
+        return 301 profile.intra.42.fr;
+    }
+
+    location /chatgpt {
+        return 301 www.chatgpt.com;
+    }
+
 	# kljksdfjaklsf
     location /cookie {
         root /Volumes/Ventoy/www;
@@ -44,7 +52,7 @@ server {
     location /home {
         root /Users/zech-chi/goinfre/;
         upload_store /Users/zech-chi/goinfre/home/;
-        # autoindex off;
+        autoindex on;
         allow_methods POST GET DELETE;
         index index.png test.pdf; 
         # cgi_extension js  /usr/local/bin/node;
