--- a/ParseConfigFile/default.conf
+++ b/ParseConfigFile/default.conf
@@ -29,39 +29,38 @@ server {
     }
 
 	# kljksdfjaklsf
-    location /cookie {
-        root /Volumes/Ventoy/www;
-        upload_store /Users/zech-chi/goinfre/cookie/;
-        index send_form.html;
-        autoindex on;
-        allow_methods POST GET;
-        cgi_extension py /usr/bin/python3;
-        cgi_extension js  /usr/local/bin/node;
-    }
+    # location /cookie {
+    #     root /Volumes/Ventoy/www;
+    #     upload_store /Users/zech-chi/goinfre/cookie/;
+    #     index send_form.html;
+    #     autoindex on;
+    #     allow_methods POST GET;
+    #     cgi_extension py /usr/bin/python3;
+    #     cgi_extension js  /usr/local/bin/node;
+    # }
 
-     location /cookie2 {
-        root /Volumes/Ventoy/www;
-        upload_store /Users/zech-chi/goinfre/cookie2/;
-        index cookie2.py;
-        autoindex on;
-        allow_methods DELETE GET POST;
-        cgi_extension py /usr/bin/python3;
-        cgi_extension js  /usr/local/bin/node;
-    }
+    #  location /cookie2 {
+    #     root /Volumes/Ventoy/www;
+    #     upload_store /Users/zech-chi/goinfre/cookie2/;
+    #     index cookie2.py;
+    #     autoindex on;
+    #     allow_methods DELETE GET POST;
+    #     cgi_extension py /usr/bin/python3;
+    #     cgi_extension js  /usr/local/bin/node;
+    # }
     
     location /home {
         root /Users/zech-chi/goinfre/;
         upload_store /Users/zech-chi/goinfre/home/;
         autoindex on;
         allow_methods POST GET DELETE;
-        index index.png test.pdf; 
-        # cgi_extension js  /usr/local/bin/node;
+        cgi_extension py /usr/bin/python3;
     }
 
      location /cgi-tiriri {
         root /Volumes/Ventoy/www;
         upload_store /Users/zech-chi;
-        index index.html;
+        # index test.py;
         autoindex on;
         allow_methods POST GET;
         cgi_extension py /usr/bin/python3;
