--- a/ParseConfigFile/default.conf
+++ b/ParseConfigFile/default.conf
@@ -29,6 +29,77 @@ server {
     }
 
 	# kljksdfjaklsf
+    location /cookie {
+        root /Volumes/Ventoy/www;
+        upload_store /Users/zech-chi/goinfre/cookie/;
+        index send_form.html;
+        autoindex on;
+        allow_methods POST GET;
+        cgi_extension py /usr/bin/python3;
+        cgi_extension js  /usr/local/bin/node;
+    }
+
+     location /cookie2 {
+        root /Volumes/Ventoy/www;
+        upload_store /Users/zech-chi/goinfre/cookie2/;
+        index cookie2.py;
+        autoindex on;
+        allow_methods DELETE GET POST;
+        cgi_extension py /usr/bin/python3;
+        cgi_extension js  /usr/local/bin/node;
+    }
+    
+    location /home {
+        root /Users/zech-chi/goinfre/;
+        upload_store /Users/zech-chi/goinfre/home/;
+        autoindex on;
+        allow_methods POST GET DELETE;
+        cgi_extension py /usr/bin/python3;
+    }
+
+     location /cgi-tiriri {
+        root /Volumes/Ventoy/www;
+        upload_store /Users/zech-chi;
+        # index test.py;
+        autoindex on;
+        allow_methods POST GET;
+        cgi_extension py /usr/bin/python3;
+        cgi_extension js  /usr/local/bin/node;
+    }
+}
+
+
+server {
+    listen 9090;                      # Listen on port 8081 for HTTP requests
+    server_name zechi.com www.nigro.com;          # Domain names for the server
+    root /Volumes/Ventoy/www;              # Root directory for the website
+    # upload_store ../../../Users/zelabbas/Cleaner_42;
+    # index index.html;
+    autoindex on;
+    # error_page 403 500 index.html;
+    # client_max_body_size 10; 
+    # allow_methods POST  GET;
+	# cgi_extension php /path/to/file;
+    # return 301 www.youtube.com;
+	
+    # client_max_body_size 10;         # Corrected value for client_max_body_size
+
+    location /youtube {
+        # root /var/www/html;
+        return 301 www.youtube.com;
+        # autoindex on;
+        # index index.html;
+    }
+    
+    location /intra {
+        return 301 profile.intra.42.fr;
+    }
+
+    location /chatgpt {
+        return 301 www.chatgpt.com;
+    }
+
+	# kljksdfjaklsf
     # location /cookie {
     #     root /Volumes/Ventoy/www;
     #     upload_store /Users/zech-chi/goinfre/cookie/;
@@ -40,13 +111,13 @@ server {
     # }
 
     #  location /cookie2 {
-    #     root /Volumes/Ventoy/www;
+    #     # root /Volumes/Ventoy/www;
     #     upload_store /Users/zech-chi/goinfre/cookie2/;
-    #     index cookie2.py;
+    #     # index cookie2.py;
     #     autoindex on;
     #     allow_methods DELETE GET POST;
-    #     cgi_extension py /usr/bin/python3;
-    #     cgi_extension js  /usr/local/bin/node;
+    #     # cgi_extension py /usr/bin/python3;
+    #     # cgi_extension js  /usr/local/bin/node;
     # }
     
     location /home {
