--- a/ParseConfigFile/default.conf
+++ b/ParseConfigFile/default.conf
@@ -100,15 +100,15 @@ server {
     }
 
 	# kljksdfjaklsf
-    location /cookie {
-        root /Volumes/Ventoy/www;
-        upload_store /Users/zech-chi/goinfre/cookie/;
-        # index send_form.html;
-        autoindex on;
-        allow_methods POST GET;
-        # cgi_extension py /usr/bin/python3;
-        # cgi_extension js  /usr/local/bin/node;
-    }
+    # location /cookie {
+    #     root /Volumes/Ventoy/www;
+    #     upload_store /Users/zech-chi/goinfre/cookie/;
+    #     index send_form.html;
+    #     autoindex on;
+    #     allow_methods POST GET;
+    #     # cgi_extension py /usr/bin/python3;
+    #     # cgi_extension js  /usr/local/bin/node;
+    # }
 
     #  location /cookie2 {
     #     # root /Volumes/Ventoy/www;
