--- a/ParseConfigFile/default.conf
+++ b/ParseConfigFile/default.conf
@@ -1,5 +1,7 @@
 server {
-    listen 8080;                      # Listen on port 8081 for HTTP requests
+    # here in listen when you give localhost in host_name is valid and will be convert in the set_host_name to 127.0.0.1;
+    # the host_name can be any ipv4   bind will failed if could not be bind it !!!!! 
+    listen 8080 127.0.0.1;                      # Listen  8081 host_name ---> hostname = ipv4
     server_name zechi.com www.nigro.com;          # Domain names for the server
     root /Volumes/Ventoy/www;              # Root directory for the website
     # upload_store ../../../Users/zelabbas/Cleaner_42;
