--- a/ParseConfigFile/test.conf
+++ b/ParseConfigFile/test.conf
@@ -1,14 +1,14 @@
 
 server {
-    listen 8080;                      # Listen on port 8081 for HTTP requests
-    listen 6060;
-    listen 7070;
+    listen 8080 10.13.2.15;                      # Listen on port 8081 for HTTP requests
+    listen 6060 10.13.2.166;
+    listen 7070 localhost;
     server_name zechi.com www.nigro.com;          # Domain names for the server
     root /Volumes/TOSHIBA/www/;              # Root directory for the website
     # upload_store ../../../Users/zelabbas/Cleaner_42;
     index index.html;
     autoindex on;
-    error_page 403 500 index.html;
+    # error_page 403 500 index.html;
     # client_max_body_size 10; 
     # allow_methods POST  GET;
 	# cgi_extension php /path/to/file;
@@ -16,6 +16,11 @@ server {
 
 	
     # client_max_body_size 10;         # Corrected value for client_max_body_size
+    location / {
+        root /Volumes/TOSHIBA/www/;  
+        index vvv.png;
+        autoindex on;
+    }
 
     location /youtube {
         # root /var/www/html;
