--- a/ParseConfigFile/test.conf
+++ b/ParseConfigFile/test.conf
@@ -1,7 +1,7 @@
 
 server {
-    listen 8080 10.13.2.15;                      # Listen on port 8081 for HTTP requests
-    listen 6060 10.13.2.166;
+    listen 8080 10.13.2.16;                      # Listen on port 8081 for HTTP requests
+    listen 6060 10.13.2.16;
     listen 7070 localhost;
     server_name zechi.com www.nigro.com;          # Domain names for the server
     root /Volumes/TOSHIBA/www/;              # Root directory for the website
@@ -91,7 +91,7 @@ server {
 	# cgi_extension php /path/to/file;
 
 	
-    client_max_body_size 10;         # Corrected value for client_max_body_size
+    #client_max_body_size 10;         # Corrected value for client_max_body_size
 
     location /youtube {
         # root /var/www/html;
@@ -101,22 +101,25 @@ server {
     }
 	# kljksdfjaklsf
     location /cookie {
-        root /Volumes/TOSHIBA;
+        root /Volumes/TOSHIBA/www;
+        upload_store /Volumes/TOSHIBA/www;
         index send_form.html;
         autoindex off;
-        allow_methods DELETE GET;
+        allow_methods POST DELETE GET;
         cgi_extension py /usr/bin/python3;
         cgi_extension js  /usr/local/bin/node;
     }
 
-     location /cookie2 {
-        root /Volumes/TOSHIBA;
+    location /cookie2 {
+        root /Volumes/TOSHIBA/www;
+        upload_store /Volumes/TOSHIBA/www;
         index cookie2.py;
         autoindex off;
-        allow_methods DELETE GET;
+        allow_methods POST DELETE GET;
         cgi_extension py /usr/bin/python3;
         cgi_extension js  /usr/local/bin/node;
     }
+
 
     location /cgi-tiriri {
         root /Volumes/TOSHIBA/www/;
