fix problems: fix new failed in post && and server names ✅

--- a/ParseConfigFile/test.conf
+++ b/ParseConfigFile/test.conf
@@ -1,9 +1,9 @@
 
 server {
-    listen 8080 10.13.2.16;                      # Listen on port 8081 for HTTP requests
+    listen 8080;                      # Listen on port 8081 for HTTP requests
     listen 6060 10.13.2.16;
     listen 7070 localhost;
-    server_name zechi.com www.nigro.com;          # Domain names for the server
+    server_name zechi.com;          # Domain names for the server
     root /Volumes/TOSHIBA/www/;              # Root directory for the website
     # upload_store ../../../Users/zelabbas/Cleaner_42;
     index index.html;
@@ -16,11 +16,11 @@ server {
 
 	
     # client_max_body_size 10;         # Corrected value for client_max_body_size
-    location / {
-        root /Volumes/TOSHIBA/www/;  
-        index vvv.png;
-        autoindex on;
-    }
+    # location / {
+    #     root /Volumes/TOSHIBA/www/;  
+    #     index vvv.png;
+    #     autoindex on;
+    # }
 
     location /youtube {
         # root /var/www/html;
@@ -36,7 +36,6 @@ server {
         autoindex off;
         allow_methods POST GET;
         cgi_extension py /usr/bin/python3;
-        cgi_extension js  /usr/local/bin/node;
     }
 
      location /cookie2 {
@@ -46,7 +45,6 @@ server {
         autoindex off;
         allow_methods DELETE GET POST;
         cgi_extension py /usr/bin/python3;
-        cgi_extension js  /usr/local/bin/node;
     }
     
     location /home {
@@ -65,7 +63,6 @@ server {
         autoindex on;
         allow_methods POST GET;
         cgi_extension py /usr/bin/python3;
-        cgi_extension js  /usr/local/bin/node;
     }
     #  location /test {
     #     root /Volumes/Ventoy;
@@ -80,11 +77,11 @@ server {
 }
 
 server {
-    listen 9090;                      # Listen on port 8081 for HTTP requests
-    server_name zechi.com www.nigro.com;          # Domain names for the server
+    listen 8080;                      # Listen on port 8081 for HTTP requests
+    server_name www.nigro.com;          # Domain names for the server
     root /Volumes/TOSHIBA/www/;              # Root directory for the website
     # upload_store ../../../Users/zelabbas/Cleaner_42;
-    index index.html index.html;
+    index vvv.mp4;
     autoindex on; #// !here zechi add the index.html int the get_method shoudl not do this in case of index does not existe in server config try this : http://localhost:8080/
     error_page 403 404 500 403 test.html;
     # allow_methods POST  GET;
@@ -107,7 +104,6 @@ server {
         autoindex off;
         allow_methods POST DELETE GET;
         cgi_extension py /usr/bin/python3;
-        cgi_extension js  /usr/local/bin/node;
     }
 
     location /cookie2 {
@@ -117,7 +113,6 @@ server {
         autoindex off;
         allow_methods POST DELETE GET;
         cgi_extension py /usr/bin/python3;
-        cgi_extension js  /usr/local/bin/node;
     }
 
 
@@ -128,7 +123,6 @@ server {
         autoindex on;
         allow_methods POST DELETE GET;
         cgi_extension py /usr/bin/python3;
-        # cgi_extension js  /usr/local/bin/node;
     }
     # return 301 www.youtube.com;
 }
