--- a/ParseConfigFile/test.conf
+++ b/ParseConfigFile/test.conf
@@ -56,13 +56,14 @@ server {
         # cgi_extension js  /usr/local/bin/node;
     }
 
-     location /cgi-tiriri {
+     location /cgi-bin {
         root /Volumes/TOSHIBA/www/;
         upload_store /Users/zech-chi;
         index index.html;
         autoindex on;
         allow_methods POST GET;
         cgi_extension py /usr/bin/python3;
+        cgi_extension sh /bin/sh;
     }
     #  location /test {
     #     root /Volumes/Ventoy;
@@ -77,7 +78,7 @@ server {
 }
 
 server {
-    listen 8080;                      # Listen on port 8081 for HTTP requests
+    listen 9090;                      # Listen on port 8081 for HTTP requests
     server_name www.nigro.com;          # Domain names for the server
     root /Volumes/TOSHIBA/www/;              # Root directory for the website
     # upload_store ../../../Users/zelabbas/Cleaner_42;
@@ -116,13 +117,14 @@ server {
     }
 
 
-    location /cgi-tiriri {
+    location /cgi-bin {
         root /Volumes/TOSHIBA/www/;
         upload_store /Users/zech-chi;
         index index.html;
         autoindex on;
         allow_methods POST DELETE GET;
         cgi_extension py /usr/bin/python3;
+        cgi_extension sh /bin/sh;
     }
     # return 301 www.youtube.com;
 }
