--- a/ParseConfigFile/test.conf
+++ b/ParseConfigFile/test.conf
@@ -1,7 +1,7 @@
 
 server {
     listen 8080;                      # Listen on port 8081 for HTTP requests
-    listen 6060 10.13.2.16;
+    # listen 6060 10.13.2.16;
     listen 7070 localhost;
     server_name zechi.com;          # Domain names for the server
     root /Volumes/TOSHIBA/www/;              # Root directory for the website
