--- a/ParseConfigFile/default.conf
+++ b/ParseConfigFile/default.conf
@@ -33,27 +33,27 @@ server {
 	# kljksdfjaklsf
     location /cookie {
         root /Volumes/Ventoy/www;
-        upload_store /Users/zech-chi/goinfre/cookie/;
+        upload_store /Users/skarim/goinfre/cookie/;
         index send_form.html;
         autoindex on;
         allow_methods POST GET;
         cgi_extension py /usr/bin/python3;
-        cgi_extension js  /usr/local/bin/node;
+        cgi_extension php  /usr/bin/php;
     }
 
      location /cookie2 {
         root /Volumes/Ventoy/www;
-        upload_store /Users/zech-chi/goinfre/cookie2/;
+        upload_store /Users/skarim/goinfre/cookie2/;
         index cookie2.py;
         autoindex on;
         allow_methods DELETE GET POST;
         cgi_extension py /usr/bin/python3;
-        cgi_extension js  /usr/local/bin/node;
+        # cgi_extension js  /usr/local/bin/node;
     }
     
     location /home {
-        root /Users/zech-chi/goinfre/;
-        upload_store /Users/zech-chi/goinfre/home/;
+        root /Users/skarim/goinfre/;
+        upload_store /Users/skarim/goinfre/home/;
         autoindex on;
         allow_methods POST GET DELETE;
         cgi_extension py /usr/bin/python3;
@@ -61,12 +61,12 @@ server {
 
      location /cgi-tiriri {
         root /Volumes/Ventoy/www;
-        upload_store /Users/zech-chi;
+        upload_store /Users/skarim/goinfre/home/;
         # index test.py;
         autoindex on;
         allow_methods POST GET;
         cgi_extension py /usr/bin/python3;
-        cgi_extension js  /usr/local/bin/node;
+        cgi_extension php  /usr/bin/php;
     }
 }
 
@@ -123,8 +123,8 @@ server {
     # }
     
     location /home {
-        root /Users/zech-chi/goinfre/;
-        upload_store /Users/zech-chi/goinfre/home/;
+        root /Users/skarim/goinfre/;
+        upload_store /Users/skarim/goinfre/home/;
         autoindex on;
         allow_methods POST GET DELETE;
         cgi_extension py /usr/bin/python3;
@@ -132,11 +132,11 @@ server {
 
      location /cgi-tiriri {
         root /Volumes/Ventoy/www;
-        upload_store /Users/zech-chi;
+        upload_store /Users/skarim;
         # index test.py;
         autoindex on;
         allow_methods POST GET;
         cgi_extension py /usr/bin/python3;
-        cgi_extension js  /usr/local/bin/node;
+        # cgi_extension js  /usr/local/bin/node;
     }
 }
