fix error in delete method✅

--- a/ParseConfigFile/test.conf
+++ b/ParseConfigFile/test.conf
@@ -36,6 +36,7 @@ server {
         autoindex off;
         allow_methods POST GET;
         cgi_extension py /usr/bin/python3;
+        cgi_extension php /usr/bin/php;
     }
 
     location /cookie2 {
@@ -64,6 +65,7 @@ server {
         allow_methods POST GET;
         cgi_extension py /usr/bin/python3;
         cgi_extension sh /bin/sh;
+        cgi_extension php /usr/bin/php;
     }
     #  location /test {
     #     root /Volumes/Ventoy;
@@ -78,7 +80,7 @@ server {
 }
 
 server {
-    listen 9090;                      # Listen on port 8081 for HTTP requests
+    listen 9090 10.13.3.4;                      # Listen on port 8081 for HTTP requests
     server_name www.nigro.com;          # Domain names for the server
     root /Volumes/TOSHIBA/www/;              # Root directory for the website
     # upload_store ../../../Users/zelabbas/Cleaner_42;
