Some modifications in default config file

--- a/ParseConfigFile/default.conf
+++ b/ParseConfigFile/default.conf
@@ -3,7 +3,7 @@ server {
     # the host_name can be any ipv4   bind will failed if could not be bind it !!!!! 
     listen 8080 127.0.0.1;                      # Listen  8081 host_name ---> hostname = ipv4
     server_name zechi.com www.nigro.com;          # Domain names for the server
-    root /Volumes/Ventoy/www;              # Root directory for the website
+    root /Volumes/TOSHIBA/www;              # Root directory for the website
     # upload_store ../../../Users/zelabbas/Cleaner_42;
     # index index.html;
     autoindex on;
@@ -32,7 +32,7 @@ server {
 
 	# kljksdfjaklsf
     location /cookie {
-        root /Volumes/Ventoy/www;
+        root /Volumes/TOSHIBA/www;
         upload_store /Users/skarim/goinfre/cookie/;
         index send_form.html;
         autoindex on;
@@ -42,7 +42,7 @@ server {
     }
 
      location /cookie2 {
-        root /Volumes/Ventoy/www;
+        root /Volumes/TOSHIBA/www;
         upload_store /Users/skarim/goinfre/cookie2/;
         index cookie2.py;
         autoindex on;
@@ -60,7 +60,7 @@ server {
     }
 
      location /cgi-tiriri {
-        root /Volumes/Ventoy/www;
+        root /Volumes/TOSHIBA/www;
         upload_store /Users/skarim/goinfre/home/;
         # index test.py;
         autoindex on;
@@ -74,7 +74,7 @@ server {
 server {
     listen 9090;                      # Listen on port 8081 for HTTP requests
     server_name zechi.com www.nigro.com;          # Domain names for the server
-    root /Volumes/Ventoy/www;              # Root directory for the website
+    root /Volumes/TOSHIBA/www;              # Root directory for the website
     # upload_store ../../../Users/zelabbas/Cleaner_42;
     # index index.html;
     autoindex on;
@@ -103,7 +103,7 @@ server {
 
 	# kljksdfjaklsf
     # location /cookie {
-    #     root /Volumes/Ventoy/www;
+    #     root /Volumes/TOSHIBA/www;
     #     upload_store /Users/zech-chi/goinfre/cookie/;
     #     index send_form.html;
     #     autoindex on;
@@ -113,7 +113,7 @@ server {
     # }
 
     #  location /cookie2 {
-    #     # root /Volumes/Ventoy/www;
+    #     # root /Volumes/TOSHIBA/www;
     #     upload_store /Users/zech-chi/goinfre/cookie2/;
     #     # index cookie2.py;
     #     autoindex on;
@@ -131,7 +131,7 @@ server {
     }
 
      location /cgi-tiriri {
-        root /Volumes/Ventoy/www;
+        root /Volumes/TOSHIBA/www;
         upload_store /Users/skarim;
         # index test.py;
         autoindex on;
