Some modifications in default config file

--- a/ParseConfigFile/default.conf
+++ b/ParseConfigFile/default.conf
@@ -59,7 +59,7 @@ server {
         cgi_extension py /usr/bin/python3;
     }
 
-     location /cgi-tiriri {
+     location /cgi-bin {
         root /Volumes/TOSHIBA/www;
         upload_store /Users/skarim/goinfre/home/;
         # index test.py;
